<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="color_picker_default_title">Route Line Color</string>
    <string name="color_swatch_description">Color <xliff:g id="color_index" example="14">%1$d</xliff:g></string>
    <string name="color_swatch_description_selected">Color <xliff:g id="color_index" example="14">%1$d</xliff:g> selected</string>
    <string name="color_picker_manual_color_hint" tools:ignore="MissingTranslation">or enter a color code here</string>
    <string name="init_title">Location info usage agreement</string>
    <string name="init_text">Operation during driving is dangerous,so please use it after\nstopping.You must use your current location\ninformation to provide accurate directions.\nDo you agree?</string>
    <string name="init_text_port">Operation during driving\nis dangerous,\nso please use it after stopping.\n\nYou must use your current\nlocation information to provide\naccurate directions.\n\nDo you agree?</string>
    <string name="hello">Hello World, FATOS Navigation</string>
    <string name="action_settings">Action Settingd</string>
    <string name="longTouchPlease">길게 터치한 후 기다려 주세요.</string>
    <string name="map_not_ready">Map is not ready yet</string>
    <string name="searchName">검색명</string>
    <string name="rpStartLat">출발지위도</string>
    <string name="rpStartLon">출발지경도</string>
    <string name="rpDestLat">목지지위도</string>
    <string name="rpDestLon">목지지경도</string>
    <string name="ahead"> 앞 </string>
    <string name="ahead_en"> ahead </string>
    <string name="ahead_ja"> 前方に </string>
    <string name="ahead_ve"> tới trước </string>
    <string name="ahead_zh"> 先 </string>
    <string name="ahead2">  </string>
    <string name="reRoute"> </string>
    <string name="TrafficReroute"> </string>
    <string name="INVALIED_STARTGOAL_SAME"> The start and the goal point is the same location. Please try again. </string>
    <string name="INVALIED_STARTGOAL_NULL"> There is no input to the start and the goal point </string>
    <string name="INVALIED_START_NULL"> Please set the start point </string>
    <string name="INVALIED_GOAL_NULL"> Please set the goal point </string>
    <string name="INVALIED_ROUTE_FAILED"> Route call failed </string>
    <string name="INVALIED_NULL"> Certain condition will not be met. </string>
    <string name="INVALIED_STARTPOS_NOT_SELECTED"> Please set the start point </string>
    <string name="INVALIED_GOALPOS_NOT_SELECTED"> Please set the goal point </string>
    <string name="TTS_IC"> 나들목 </string>
    <string name="TTS_LASTWORD1"> </string>
    <string name="TTS_LASTWORD2"> </string>
    <string name="TTS_VIA">  </string>
    <string name="TTS_GOAL"> </string>
    <string name="string_comfirm">Yes</string>
    <string name="string_yes">예</string>
    <string name="string_no">No</string>
    <string name="string_yes_all_right">Yes, All right</string>
    <string name="string_menu">Menu</string>
    <string name="string_getdirections">Get Directions</string>
    <string name="string_searchev">EV charging station</string>
    <string name="string_reroute">Redirection</string>
    <string name="string_changerouteoption">Route options</string>
    <string name="string_viewroutesummary">Route summary</string>
    <string name="string_routecancel">Cancel route</string>
    <string name="string_routehistory">Route history</string>
    <string name="string_preferences">Preferences</string>
    <string name="string_startsimulation">Start Simulation</string>
    <string name="string_stopsimulation">Stop Simulation</string>
    <string name="string_currentlocation">Current location</string>
    <string name="string_entersearchname">Enter your destination</string>
    <string name="string_frequent">Frequent</string>
    <string name="string_myplace">My place</string>
    <string name="string_results">Results</string>
    <string name="string_results_sort">      | Frequent</string>
    <string name="string_resultpage_sort">      | Accuracy</string>
    <string name="string_add">Add</string>
    <string name="string_delete">Delete</string>
    <string name="string_routing">Goal</string>
    <string name="string_set_startpos">Start</string>
    <string name="string_rename">Rename</string>
    <string name="string_previous">Previous</string>
    <string name="string_allview">View all</string>
    <string name="string_empty_text">There is no list of My place.</string>
    <string name="string_history_empty_text">There is no list of Route history.</string>
    <string name="string_routesummary">Route summary</string>
    <string name="string_optimal">Optimal</string>
    <string name="string_option">Opt.</string>
    <string name="string_distance">Distance</string>
    <string name="string_time">Time</string>
    <string name="string_map">Map</string>
    <string name="string_list">List </string>
    <string name="string_simulation">Simulation</string>
    <string name="string_startjourney">Go</string>
    <string name="string_tripreport">Trip Report</string>
    <string name="string_tripdistance_express"> exceed.</string>
    <string name="string_tripdistance_shorten"> less.</string>
    <string name="string_tripdistance_same"> same.</string>
    <string name="string_triptime_express">10h Excess</string>
    <string name="string_triptime_shorten">10h Shorten</string>
    <string name="string_triptime_realroute">Real path</string>
    <string name="string_triptime_firstroute">Initial path</string>
    <string name="string_triphistory">Route History</string>
    <string name="string_searchforevcharging">EV charging station</string>
    <string name="string_dcchademo">DC\nCHAdeMO</string>
    <string name="string_combo">DC\nCombo</string>
    <string name="string_acph">AC3ph</string>
    <string name="string_free">Free</string>
    <string name="string_pay">Pay</string>
    <string name="string_freepay">All</string>
    <string name="string_moderate">Moderate</string>
    <string name="string_rapid">Rapid</string>
    <string name="string_outlet">220v\noutlet</string>
    <string name="string_search">Search</string>
    <string name="string_evable_charge">Available</string>
    <string name="string_evable_all">All</string>
    <string name="string_settings">Setting</string>
    <string name="string_general">General</string>
    <string name="string_navigation">Navigation</string>
    <string name="string_vehicleinfo">Vehicle info</string>
    <string name="string_distanceunit">Distance unit</string>
    <string name="string_speedunit">Speed unit</string>
    <string name="string_defaultlanguage">Default Language</string>
    <string name="string_alwaysactive">Always Active</string>
    <string name="string_termsofUse">Terms of Use</string>
    <string name="string_versioninfo">Version info</string>
    <string name="string_copyright">Copyright</string>
    <string name="string_labtest">Lab</string>
    <string name="string_compact">Compact</string>
    <string name="string_standard">Standard</string>
    <string name="string_midvan">Mid-VAN</string>
    <string name="string_lvan">L-VAN</string>
    <string name="string_truck">Truck</string>
    <string name="string_spurpose">S-Purpose</string>
    <string name="string_gasoline">Gasoline</string>
    <string name="string_premium">Premium</string>
    <string name="string_diesel">Diesel</string>
    <string name="string_lpg">LPG</string>
    <string name="string_electricity">Electricity</string>
    <string name="string_trucktype">Truck type</string>
    <string name="string_vehicletype">Vehicle type</string>
    <string name="string_gastype">Gas type</string>
    <string name="string_app">App</string>
    <string name="string_buildnumber">Build number</string>
    <string name="string_basemapdb">Base map DB</string>
    <string name="string_searchdb">Search DB</string>
    <string name="string_sdi">Safety Drive Information</string>
    <string name="string_simul_gps">Simul GPS</string>
    <string name="string_pathlinecolor">Path line color</string>
    <string name="string_routeoptions">Route options</string>
    <string name="string_nightmode">Night mode</string>
    <string name="string_mapcolortheme">Map color theme</string>
    <string name="string_dynamiczoom">Dynamic Zoom</string>
    <string name="string_highwaymode">Highway mode</string>
    <string name="string_mapdownload">Map download</string>
    <string name="string_option_optimal">Optimal</string>
    <string name="string_auth">인증</string>
    <string name="string_authorization_noti_title">단말 인증 안내</string>
    <string name="string_authorization_noti_text">단말인증에 실패되었습니다.\n단말인증을 재시도 하시거나.\n문제가 지속되는 경우 아래\n문의처로 문의하시기 바랍니다.</string>
    <string name="string_authorization_noti_yes">계속사용</string>
    <string name="string_authorization_noti_no">재시도</string>
    <string name="string_authorization_noti2_title">미인증 단말이용 안내</string>
    <string name="string_authorization_noti2_text">미인증된 단말 이용시 위험물 운송기능을\n사용하실 수 없으며, 경로안내 기능만\n제공됩니다.</string>
    <string name="string_authorization_noti2_yes">확인</string>
    <string name="string_authorization_noti3_text">위험물앱이 응답하지 않습니다.\n위험물앱이 실행중인지 확인해 주세요.</string>
    <string name="string_routerecovery">Route recovery</string>
    <string name="string_routebefore">Would you like to get directions \nto the route just before?</string>
    <string name="string_backbtnexit">Press Back button again to exit.</string>
    <string name="string_reroute_status">Redirection is complete.</string>
    <string name="string_routecancel_status">Route guidance canceled.</string>
    <string name="string_arrived_destination">You\'ve arrived at your destination.</string>
    <string name="string_already_registered">It is already registered.</string>
    <string name="string_registered">Registered.</string>
    <string name="string_removed">Removed.</string>
    <string name="string_deleted">Deleted.</string>
    <string name="string_settheorigin">Please set the origin.</string>
    <string name="string_nosave_myplace">You have no saved My place.</string>
    <string name="string_noresult_found">No Results Found.</string>
    <string name="string_nosaved_frequent">There is no saved Frequent place.</string>
    <string name="string_preparingtheservice">We are preparing the service.</string>
    <string name="string_set_origin">Your origin has been set.</string>
    <string name="string_gettingdirections">Getting directions.</string>
    <string name="string_viewall">View all</string>
    <string name="string_allcount">Total</string>
    <string name="string_getdirectionsfailed_server">[1001] Get directions failed.</string>
    <string name="string_googleroutefail_inkorea_server">[1002] The Google map API does not provide navigation to the Korean region.</string>
    <string name="string_addGoalFail">Can not add to destination</string>
    <string name="string_googleroutefail_inkorea_server_fatos">The Google map API does not provide navigation in Korea, so it is navigated to FATOS Map.</string>
    <string name="string_evsearch_failed_server">[2001] Service is delayed.</string>
    <string name="string_getdirectionsfailed">[101] Get directions failed.</string>
    <string name="string_hour">hr</string>
    <string name="string_min">min</string>
    <string name="string_sec">s</string>
    <string name="string_routeguidance">Route guidance</string>
    <string name="string_routeguidance_exit">Are you sure you want \nto exit route guidance?</string>
    <string name="string_routesimul_exit">Are you sure you want to \nexit route simulation?</string>
    <string name="string_alert">Alert</string>
    <string name="string_language_change">Do you want to change the language setting?\nSome screens may not be displayed\nin the set language</string>
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
</resources>